--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "dotenv": "^16.4.2",
+    "express": "^4.18.2",
     "telegraf": "^4.15.3"
   }
 }
